--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,9 @@ name = "jcc"
 version = "0.1.0"
 authors = ["Uku Taht <uku.taht@gmail.com>"]
 
+[lib]
+doctest = false
+doc = false
+bench = false
+
 [dependencies]
