--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -6,26 +6,29 @@ ES2016/**
 es2017/**
 es2018/**
 ES6/**
-expression/**
 invalid-syntax/**
 JSX/**
 tokenize/**
 tolerant-parse/**
 whitespace/**
+statement/**
 
-
-statement/block/**
-statement/break/**
-statement/continue/**
-statement/debugger/**
-statement/empty/**
-statement/expression/**
-statement/if/**
-statement/iteration/**
-statement/labelled/**
-statement/return/**
-statement/switch/**
-statement/throw/**
-statement/try/**
-statement/variable/**
-statement/with/**
+expression/additive/**
+expression/assignment/**
+expression/binary-bitwise/**
+expression/binary-logical/**
+expression/binary/**
+expression/bitwise-shift/**
+expression/complex/**
+expression/conditional/**
+expression/equality/migrated_0001
+expression/equality/migrated_0002
+expression/equality/migrated_0003
+expression/grouping/**
+expression/left-hand-side/**
+expression/left-hand-side/**
+expression/multiplicative/**
+expression/postfix/**
+expression/primary/**
+expression/relational/**
+expression/unary/**
