Pass arrays esprima test

--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -26,6 +26,24 @@ expression/left-hand-side/**
 expression/left-hand-side/**
 expression/multiplicative/**
 expression/postfix/**
-expression/primary/**
+
+expression/primary/array/migrated_0001
+expression/primary/array/migrated_0002
+expression/primary/array/migrated_0003
+expression/primary/array/migrated_0004
+expression/primary/array/migrated_0005
+expression/primary/array/migrated_0006
+expression/primary/array/migrated_0007
+expression/primary/array/migrated_0008
+expression/primary/array/migrated_0009
+expression/primary/array/migrated_0010
+expression/primary/array/migrated_0011
+expression/primary/array/migrated_0012
+
+expression/primary/keyword/**
+expression/primary/literal/**
+expression/primary/object/**
+expression/primary/other/**
+
 expression/relational/**
 expression/unary/**
