Pass new expression tests with esprima

--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -22,8 +22,30 @@ expression/bitwise-shift/**
 expression/complex/**
 expression/conditional/**
 expression/grouping/**
-expression/left-hand-side/**
-expression/left-hand-side/**
+
+expression/left-hand-side/let_object_computed
+expression/left-hand-side/migrated_0002
+expression/left-hand-side/migrated_0003
+expression/left-hand-side/migrated_0004
+expression/left-hand-side/migrated_0005
+expression/left-hand-side/migrated_0006
+expression/left-hand-side/migrated_0007
+expression/left-hand-side/migrated_0008
+expression/left-hand-side/migrated_0009
+expression/left-hand-side/migrated_0010
+expression/left-hand-side/migrated_0011
+expression/left-hand-side/migrated_0012
+expression/left-hand-side/migrated_0013
+expression/left-hand-side/migrated_0014
+expression/left-hand-side/migrated_0015
+expression/left-hand-side/migrated_0016
+expression/left-hand-side/migrated_0017
+expression/left-hand-side/migrated_0018
+expression/left-hand-side/migrated_0019
+expression/left-hand-side/migrated_0020
+expression/left-hand-side/migrated_0021
+expression/left-hand-side/migrated_0022
+
 expression/multiplicative/**
 expression/postfix/**
 
