--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -46,7 +46,29 @@ expression/postfix/**
 expression/primary/array/migrated_0007
 
 expression/primary/keyword/**
-expression/primary/literal/**
+
+expression/primary/literal/numeric/invalid_hex
+# This one doesn't have loc for some reason
+expression/primary/literal/numeric/migrated_0002
+expression/primary/literal/numeric/migrated_0004
+expression/primary/literal/numeric/migrated_0006
+expression/primary/literal/numeric/migrated_0007
+expression/primary/literal/numeric/migrated_0008
+expression/primary/literal/numeric/migrated_0009
+expression/primary/literal/numeric/migrated_0010
+expression/primary/literal/numeric/migrated_0011
+expression/primary/literal/numeric/migrated_0012
+expression/primary/literal/numeric/migrated_0013
+expression/primary/literal/numeric/migrated_0014
+expression/primary/literal/numeric/migrated_0015
+expression/primary/literal/numeric/migrated_0016
+expression/primary/literal/numeric/migrated_0017
+expression/primary/literal/numeric/migrated_0019
+expression/primary/literal/numeric/migrated_0020
+
+expression/primary/literal/regular-expression/**
+expression/primary/literal/string/**
+
 expression/primary/object/**
 expression/primary/other/**
 
