Pass andand test

--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -14,7 +14,13 @@ statement/**
 expression/additive/**
 expression/assignment/**
 expression/binary-bitwise/**
-expression/binary-logical/**
+
+expression/binary-logical/migrated_0000
+expression/binary-logical/migrated_0002
+expression/binary-logical/migrated_0003
+expression/binary-logical/migrated_0004
+expression/binary-logical/migrated_0005
+
 expression/binary/**
 expression/bitwise-shift/**
 expression/complex/**
