--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -11,7 +11,8 @@ JSX/**
 whitespace/**
 statement/**
 
-expression/additive/**
+expression/additive/migrated_0002
+
 expression/assignment/**
 expression/binary-bitwise/**
 
