--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -18,7 +18,14 @@ expression/binary-bitwise/**
 
 expression/binary-logical/migrated_0005
 
-expression/binary/**
+expression/binary/migrated_0011
+expression/binary/migrated_0012
+expression/binary/migrated_0013
+expression/binary/migrated_0014
+expression/binary/migrated_0015
+expression/binary/migrated_0016
+expression/binary/migrated_0017
+
 expression/bitwise-shift/**
 expression/complex/**
 expression/conditional/**
@@ -29,7 +36,7 @@ expression/left-hand-side/migrated_0007
 expression/left-hand-side/migrated_0009
 expression/left-hand-side/migrated_0013
 
-expression/multiplicative/**
+
 expression/postfix/**
 
 expression/primary/keyword/**
