Add this expression

--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -32,4 +32,6 @@ expression/primary/literal/regular-expression/**
 expression/primary/literal/string/**
 
 expression/primary/object/**
-expression/primary/other/**
+expression/primary/other/migrated_0001
+expression/primary/other/migrated_0002
+expression/primary/other/migrated_0003
