Pass first object literal test

--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -32,4 +32,44 @@ expression/primary/literal/numeric/migrated_0009
 expression/primary/literal/regular-expression/**
 expression/primary/literal/string/**
 
-expression/primary/object/**
+expression/primary/object/invalid-getter
+expression/primary/object/invalid-setter1
+expression/primary/object/invalid-setter2
+expression/primary/object/migrated_0001
+expression/primary/object/migrated_0002
+expression/primary/object/migrated_0003
+expression/primary/object/migrated_0004
+expression/primary/object/migrated_0005
+expression/primary/object/migrated_0006
+expression/primary/object/migrated_0007
+expression/primary/object/migrated_0008
+expression/primary/object/migrated_0009
+expression/primary/object/migrated_0010
+expression/primary/object/migrated_0011
+expression/primary/object/migrated_0012
+expression/primary/object/migrated_0013
+expression/primary/object/migrated_0014
+expression/primary/object/migrated_0015
+expression/primary/object/migrated_0016
+expression/primary/object/migrated_0017
+expression/primary/object/migrated_0018
+expression/primary/object/migrated_0019
+expression/primary/object/migrated_0020
+expression/primary/object/migrated_0021
+expression/primary/object/migrated_0022
+expression/primary/object/migrated_0023
+expression/primary/object/migrated_0024
+expression/primary/object/migrated_0025
+expression/primary/object/migrated_0026
+expression/primary/object/migrated_0027
+expression/primary/object/migrated_0028
+expression/primary/object/migrated_0029
+expression/primary/object/migrated_0030
+expression/primary/object/migrated_0031
+expression/primary/object/migrated_0032
+expression/primary/object/migrated_0033
+expression/primary/object/migrated_0034
+expression/primary/object/migrated_0035
+expression/primary/object/migrated_0036
+expression/primary/object/migrated_0037
+expression/primary/object/migrated_0038
