--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -11,7 +11,8 @@ JSX/**
 whitespace/**
 statement/**
 
-expression/conditional/**
+expression/conditional/migrated_0001
+expression/conditional/migrated_0002
 
 expression/left-hand-side/let_object_computed
 expression/left-hand-side/migrated_0013
