--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -13,7 +13,14 @@ whitespace/**
 statement/break/**
 statement/continue/**
 statement/expression/**
-statement/if/**
+
+statement/if/migrated_0001
+statement/if/migrated_0002
+statement/if/migrated_0003
+statement/if/migrated_0004
+statement/if/migrated_0005
+statement/if/migrated_0006
+
 statement/iteration/**
 statement/labelled/**
 
