Parse do while statement

--- a/tests/.esprima-ignore
+++ b/tests/.esprima-ignore
@@ -13,7 +13,40 @@ whitespace/**
 statement/break/**
 statement/continue/**
 statement/expression/**
-statement/iteration/**
+
+statement/iteration/const_forin
+statement/iteration/for-in-let
+statement/iteration/for-let-let
+statement/iteration/for-statement-with-seq
+statement/iteration/migrated_0001
+statement/iteration/migrated_0002
+statement/iteration/migrated_0003
+statement/iteration/migrated_0004
+statement/iteration/migrated_0005
+statement/iteration/migrated_0006
+statement/iteration/migrated_0007
+statement/iteration/migrated_0008
+statement/iteration/migrated_0009
+statement/iteration/migrated_0010
+statement/iteration/migrated_0011
+statement/iteration/migrated_0012
+statement/iteration/migrated_0013
+statement/iteration/migrated_0014
+statement/iteration/migrated_0015
+statement/iteration/migrated_0016
+statement/iteration/migrated_0017
+statement/iteration/migrated_0018
+statement/iteration/migrated_0019
+statement/iteration/migrated_0020
+statement/iteration/migrated_0021
+statement/iteration/migrated_0022
+statement/iteration/migrated_0023
+statement/iteration/migrated_0024
+statement/iteration/migrated_0025
+statement/iteration/migrated_0026
+statement/iteration/pattern-in-for-in
+statement/iteration/unterminated-do-while
+
 statement/labelled/**
 
 statement/try/strict_simple_catch
