--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ harness = false
 
 [dependencies]
 serde_json = "1.0"
+string-interner = "0.6.2"
+lazy_static = "0.2"
 
 [dev-dependencies]
 rustc-test = "0.1"
