--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ harness = false
 serde_json = "1.0"
 string-interner = "0.6.2"
 lazy_static = "0.2"
+fnv = "1.0.3"
 
 [dev-dependencies]
 rustc-test = "0.1"
